--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>test</title>
   </head>
   <body>
-    <h1>hello lads</h1>
-    <p>this is a test for my first commit on the github</p>
+    
+    <p>this is a test for my first or cahngin this section</p>
     <p>lets hope for more and future commits whit big big projects! :0</p>
+
+    <p>so lets see how it works by making this new p tag</p>
   </body>
 </html>
